@@ -107,7 +107,7 @@ sub build_parameters_mirnature {
 	#mirbase
 	my $parameters_others = "-l ".$variable->[3]->{"Default_folders"}->{"List_cm_miRNAs"}." -m mirbase -ps 0 -pe ".$variable->[3]->{"Homology_options"}->{"Parallel_linux"}." -nmodels ".$variable->[3]->{"Default_folders"}->{"Other_CM_folder"}." -spe ".$variable->[3]->{"Specie_data"}->{"Tag"}." -n_spe ".$variable->[3]->{"Specie_data"}->{"Name"}." -w ".$variable->[4]->{"User_results"}->{"Output_miRNAture_folder"}." -data ".$variable->[3]->{"Default_folders"}->{"Data_folder"}. " -cmp ".$variable->[3]->{"Default_folders"}->{"Other_CM_folder"}." -hmmp ".$variable->[3]->{Default_folders}{"Other_HMM_folder"}." -rep ".$variable->[3]->{Homology_options}->{Repetition_threshold}." -nb_cut ".$variable->[3]->{Homology_options}->{Threshold_bitscore};
 	#user
-	my $parameters_user = "-l ".$variable->[3]->{"Default_folders"}->{"List_cm_miRNAs"}." -m user -ps 0 -pe ".$variable->[3]->{"Homology_options"}->{"Parallel_linux"}." -nmodels ".$variable->[3]->{"Default_folders"}->{"User_CM_folder"}." -spe ".$variable->[3]->{"Specie_data"}->{"Tag"}." -n_spe ".$variable->[3]->{"Specie_data"}->{"Name"}." -w ".$variable->[4]->{"User_results"}->{"Output_miRNAture_folder"}." -data ".$variable->[3]->{"Default_folders"}->{"Data_folder"}. " -cmp ".$variable->[3]->{"Default_folders"}->{"User_CM_folder"}." -hmmp ".$variable->[3]->{"Default_folders"}->{"User_HMM_folder"}." -rep ".$variable->[3]->{Homology_options}->{Repetition_threshold}." -nb_cut ".$variable->[3]->{Homology_options}->{Threshold_bitscore};
+	my $parameters_user = "-l ".$variable->[3]->{"Default_folders"}->{"List_cm_miRNAs"}." -m user -ps 0 -pe ".$variable->[3]->{"Homology_options"}->{"Parallel_linux"}." -nmodels ".$variable->[3]->{"Default_folders"}->{"User_folder"}." -spe ".$variable->[3]->{"Specie_data"}->{"Tag"}." -n_spe ".$variable->[3]->{"Specie_data"}->{"Name"}." -w ".$variable->[4]->{"User_results"}->{"Output_miRNAture_folder"}." -data ".$variable->[3]->{"Default_folders"}->{"Data_folder"}. " -cmp ".$variable->[3]->{"Default_folders"}->{"User_CM_folder"}." -hmmp ".$variable->[3]->{"Default_folders"}->{"User_HMM_folder"}." -rep ".$variable->[3]->{Homology_options}->{Repetition_threshold}." -nb_cut ".$variable->[3]->{Homology_options}->{Threshold_bitscore};
 	#final
 	my $parameters_final_homology = "-l ".$variable->[3]->{"Default_folders"}->{"List_cm_miRNAs"}." -m final -ps 0 -pe 0 -spe ".$variable->[3]->{"Specie_data"}->{"Tag"}." -n_spe ".$variable->[3]->{"Specie_data"}->{"Name"}." -w ".$variable->[4]->{"User_results"}->{"Output_miRNAture_folder"}." -data ".$variable->[3]->{"Default_folders"}->{"Data_folder"}." -rep ".$variable->[3]->{Homology_options}->{Repetition_threshold}." -nb_cut ".$variable->[3]->{Homology_options}->{Threshold_bitscore};
 	$parameters_homology{"blast"} = $parameters_blast;	
