@@ -2,6 +2,13 @@ Revision history for Bio-miRNAture
 
 1.01    Apr 12 2022.
         # Updates
+        - All modes run in parallel using:
+          O. Tange (2018): GNU Parallel 2018, Mar 2018, ISBN 9781387509881, DOI https://doi.org/10.5281/zenodo.1146014
+        - hmm searches now running by default rfam, mirbase (and user) models.
+        - Re-organized homology running modes from:
+            Blast,HMM,Infernal,OTHER_CM,Final
+          to
+            blast,hmm,rfam,mirbase,user,final
         - Transverse search added to find specific files over folders. 
         - Included flag '-nbitscore_cutoff' which control the normalized bitscore threshold (nBit).
           nBit = Bitscore / Defined-gathering-score.
@@ -18,7 +25,7 @@ Revision history for Bio-miRNAture
           greater E-values.
         - Broken evaluation could be restarted, miRNAture evaluates folder structure and structurally evaluate
           candidates.
-        # Corrected bugs
+        ### Corrected bugs
         - Temporal file folders moved to TemporalFiles/ folder.
         - Corrected cleaning of temporal files.
         - Remove of genome.txt file and related functions.
